# cnfgen

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
cnfgen/: .constraint_compiler.py.swp  __init__.py  constraint_compiler.py  sbva.py  types.py
demo/: dsl-demo.py
tests/: test_basic.py  test_clique_cover.py  test_graph_coloring.py  test_intadd_commutativity.py  test_knapsack.py  test_symmetry_break.py  test_vertex_cover.py
